# mailing_service

./: pyproject.toml  sheduler.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
customers/: admin.py  forms.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_customer_owner.py
customers/templates/customers/: customer_detail.html  customer_form.html  customer_list.html
mail_messages/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mail_messages/migrations/: 0001_initial.py  0002_message_owner.py  0003_alter_message_owner.py
mail_messages/templates/mail_messages/: message_confirm_delete.html  message_detail.html  message_form.html
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: run.py  run_mailing.py
mailing/migrations/: 0001_initial.py  0002_log.py  0003_mailing_owner_alter_mailing_datetime_finish_and_more.py  0004_alter_mailing_datetime_finish_and_more.py  0005_alter_mailing_datetime_finish_and_more.py
mailing/templates/mailing/: home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
mailing/templates/mailing/includes/: inc_main_menu.html  inc_under_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: ccmg.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_alter_user_id.py  0004_alter_user_id.py  0005_alter_user_id.py
